# audymus-api

./: Cargo.toml  Dockerfile  Rocket.toml  scheme.sql
.github/workflows/: rust.yml
.vim/: coc-settings.json
src/: db.rs  main.rs
