[package]
name = "audymus-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version="0.4.10", features = ["tls"]}
serde = {version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "mysql_pool"]
